// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> component snapshot test matches snapshot 1`] = `
<body>
  <div>
    <span>
      test nick value
    </span>
  </div>
</body>
`;

exports[`<Text /> component snapshot test matches snapshot while fetching data 1`] = `
<body>
  <div>
    <h3>
      fetching data in progress
    </h3>
  </div>
</body>
`;

exports[`<Text /> component snapshot test matches snapshot with data from context 1`] = `
<body>
  <div>
    <input
      type="text"
      value="test nick value"
    />
  </div>
</body>
`;

exports[`<Text /> component snapshot test matches snapshot with edit true and inputOptions 1`] = `
<body>
  <div>
    <input
      name="test-name"
      type="url"
      value="test nick value"
    />
  </div>
</body>
`;

exports[`<Text /> component snapshot test renders custom error component if passed and there is an error 1`] = `
<body>
  <div>
    <span
      id="custom-error-component"
    >
      Error: No value found for property.
    </span>
  </div>
</body>
`;

exports[`<Text /> component snapshot test renders default error message if there is an error 1`] = `
<body>
  <div>
    <span>
      Error: No value found for property.
    </span>
  </div>
</body>
`;

exports[`<Text /> component snapshot test renders loading component if passed while fetching data 1`] = `
<body>
  <div>
    <span
      id="custom-loading-component"
    >
      loading...
    </span>
  </div>
</body>
`;
